--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,6 +1,3 @@
-.content {
-  margin-top: 104px;
-}
 .logo {
   display: block;
   background: no-repeat center url(../assets/logo.png);
@@ -18,7 +15,7 @@
 
 .smallLogo {
   display: block;
-  background: no-repeat center url(../assets/logo.png);
+  background: no-repeat center url(../assets/logo-ls.png);
   width: 100%;
   height: 48.75px;
   text-indent: 110%;
