--- a/scss/bootstrap/_variables.scss
+++ b/scss/bootstrap/_variables.scss
@@ -379,11 +379,24 @@ $gradient: linear-gradient(
 $spacer: 1rem !default;
 $spacers: (
   0: 0,
-  1: $spacer * 0.25,
-  2: $spacer * 0.5,
-  3: $spacer,
-  4: $spacer * 1.5,
-  5: $spacer * 3,
+  1: $spacer * 0.375,
+  //6
+  2: $spacer * 0.625,
+  //10
+  3: $spacer * 0.75,
+  //12
+  4: $spacer * 0.9375,
+  //15
+  5: $spacer * 1.125,
+  //18
+  6: $spacer * 1.5,
+  //24
+  7: $spacer * 1.875,
+  //30
+  8: $spacer * 2.5,
+  //40
+  9: $spacer * 6.5,
+  //104
 ) !default;
 
 $negative-spacers: if(
@@ -626,12 +639,21 @@ $h6-font-size: $font-size-base !default;
 
 // scss-docs-start font-sizes
 $font-sizes: (
-  1: $h1-font-size,
-  2: $h2-font-size,
-  3: $h3-font-size,
-  4: $h4-font-size,
-  5: $h5-font-size,
-  6: $h6-font-size,
+  1: $font-size-base * 0.625,
+  //10px
+  2: $font-size-base * 0.75,
+  //12px
+  3: $font-size-base * 0.875,
+  //14px
+  4: $font-size-base,
+  5: $font-size-base * 1.125,
+  //18px
+  6: $font-size-base * 1.25,
+  //20px
+  7: $font-size-base * 1.5,
+  //24px
+  8: $font-size-base * 3.0625,
+  //49px
 ) !default;
 // scss-docs-end font-sizes
 
